# token-forensics

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/token_forensics/: __init__.py  cli.py  stats.py  tui.py
tests/: test_cli.py
