[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "token-forensics"
version = "0.1.0"
description = "Explain Codex token usage one inference and tool loop at a time"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Lucas Aschenbach" }]

[project.scripts]
token-forensics = "token_forensics.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
